correction de index.html après être passé sur validator

--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
 
 <body>
 
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">My Cheat Sheet Emmet</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
-        <form class="navbar-form navbar-right" role="form">
+        <form class="navbar-form navbar-right">
           <div class="form-group">
             <img id="met" src="emmett.jpeg" alt="logo emmet" class="visible-xs visible-sm visible-lg visible-md pull-right">
             <img id="MT" src="emmett.jpeg" alt="logo emmet">
+          </div>
         </form>
-        </div>
+
         <!--/.navbar-collapse -->
       </div>
   </nav>
