--- a/index.html
+++ b/index.html
@@ -119,9 +119,10 @@
           </div>
           <div id="ongletTwo" class="panel-collapse collapse">
             <div class="panel-body">
-              <p>En ce qui concerne le CSS, c'est le même principe :
-                <br>
-                <div class="table">
+              <p>En ce qui concerne le CSS, c'est le même principe :</p>
+              <br>
+              <div class="table">
+                <ul>
                   <li>
                     <kbd>pos :</kbd>position: relative</li>
                   <li>
@@ -144,8 +145,8 @@
                     <kbd>bgi</kbd>background-image:url()</li>
                   <li>
                     <kbd>bgr:n</kbd>background-repeat:no-repeat</li>
-
-                  <a href="http://docs.emmet.io/cheat-sheet/" target="_blank">En savoir plus.</a></p>
+                </ul>
+                <a href="http://docs.emmet.io/cheat-sheet/" target="_blank">En savoir plus.</a>
               </div>
             </div>
           </div>
@@ -168,36 +169,37 @@
       <hr>
       <footer>
 
-        <p>REM | Cheat Sheet NaiNai |</p>
+        <p>REM | Cheat Sheet NaiNai </p>
       </footer>
     </div>
-    <!-- /container -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script>
-      window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')
-    </script>
+  </div>
+  <!-- /container -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script>
+    window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')
+  </script>
 
-    <script src="js/vendor/bootstrap.min.js"></script>
+  <script src="js/vendor/bootstrap.min.js"></script>
 
-    <script src="js/main.js"></script>
+  <script src="js/main.js"></script>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b, o, i, l, e, r) {
-        b.GoogleAnalyticsObject = l;
-        b[l] || (b[l] =
-          function() {
-            (b[l].q = b[l].q || []).push(arguments)
-          });
-        b[l].l = +new Date;
-        e = o.createElement(i);
-        r = o.getElementsByTagName(i)[0];
-        e.src = '//www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e, r)
-      }(window, document, 'script', 'ga'));
-      ga('create', 'UA-XXXXX-X', 'auto');
-      ga('send', 'pageview');
-    </script>
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+  <script>
+    (function(b, o, i, l, e, r) {
+      b.GoogleAnalyticsObject = l;
+      b[l] || (b[l] =
+        function() {
+          (b[l].q = b[l].q || []).push(arguments)
+        });
+      b[l].l = +new Date;
+      e = o.createElement(i);
+      r = o.getElementsByTagName(i)[0];
+      e.src = '//www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e, r)
+    }(window, document, 'script', 'ga'));
+    ga('create', 'UA-XXXXX-X', 'auto');
+    ga('send', 'pageview');
+  </script>
 </body>
 
 </html>
