modification de index.html après être passé sur validator, lien a sorti des tableaux des onglets

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Cheat Sheet Emmet-Atom</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,6 +33,8 @@
 
         <!--/.navbar-collapse -->
       </div>
+      <!--fin div container-->
+    </div>
   </nav>
 
   <!--c'est l'encadré en gris-le header-->
@@ -89,28 +91,29 @@
           <div id="ongletOne" class="panel-collapse collapse in">
             <div class="panel-body">
               <p>Il existe sur Atom (éditeur de texte) une manière de taper encore plus rapidement les balises pour écrire un code.
-                <br>Pour le fichier HTML, on a (cf les images ci-dessus):
-                <br>
-                <div class="table">
-                  <ul>
-                    <li>
-                      <kbd>ul>li*5 :</kbd>(ul) (li)(/li) (li)(/li) (li)(/li) (li)(/li) (li)(/li) (/ul)</li>
-                    <li>
-                      <kbd>div+p+bq :</kbd>(div)(/div) (p)(/p) (blockquote)(/blockquote)</li>
-                    <li>
-                      <kbd>nav>ul>li :</kbd>(nav) (ul) (li)(/li) (/ul) (/nav)</li>
-                    <li>
-                      <kbd>#header :</kbd>(div id="header")(/div)</li>
-                    <li>
-                      <kbd>.class :</kbd>(div class="class")(/div)</li>
-                    <li>
-                      <kbd>meta:vp :</kbd>(meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" /)</li>
-                    <a href="http://docs.emmet.io/cheat-sheet/" target="_blank">Pour voir encore plus de raccourcis</a></p>
-              </ul>
+                <br>Pour le fichier HTML, on a (cf les images ci-dessus):</p>
+              <br>
+              <div class="table">
+                <ul>
+                  <li>
+                    <kbd>ul>li*5 :</kbd>(ul) (li)(/li) (li)(/li) (li)(/li) (li)(/li) (li)(/li) (/ul)</li>
+                  <li>
+                    <kbd>div+p+bq :</kbd>(div)(/div) (p)(/p) (blockquote)(/blockquote)</li>
+                  <li>
+                    <kbd>nav>ul>li :</kbd>(nav) (ul) (li)(/li) (/ul) (/nav)</li>
+                  <li>
+                    <kbd>#header :</kbd>(div id="header")(/div)</li>
+                  <li>
+                    <kbd>.class :</kbd>(div class="class")(/div)</li>
+                  <li>
+                    <kbd>meta:vp :</kbd>(meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" /)</li>
+                </ul>
+                <a href="http://docs.emmet.io/cheat-sheet/" target="_blank">Pour voir encore plus de raccourcis</a>
               </div>
             </div>
           </div>
         </div>
+
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
@@ -151,6 +154,7 @@
             </div>
           </div>
         </div>
+
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
@@ -164,9 +168,10 @@
             </div>
           </div>
         </div>
-
       </div>
+
       <hr>
+
       <footer>
 
         <p>REM | Cheat Sheet NaiNai </p>
